opam-version: "2.0"
maintainer: "ilias.gar@gmail.com"
authors: ["Ilias Garnier"]
homepage: "https://github.com/igarnier/vlayout"
bug-reports: "https://github.com/igarnier/vlayout/issues"
dev-repo: "git+https://github.com/igarnier/vlayout.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" { >= "1.7" }
  "vlayout"
  "data-encoding"
]
descr: "
Data encodings for vlayout.
"
